# privyq

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
core-go/: Dockerfile  Makefile  README.md  go.mod  go.sum
core-go/migrations/: 0001_init.sql  0002_audit_events.sql
deploy/: docker-compose.yml
deploy/kubernetes/: privyq.yaml
docs/: BENCHMARKS.md  MIGRATION_v1_to_v2.md  README.md  SYSTEM_ARCHITECTURE.md  blueprint.md  chapter_structure.md  v2_blueprint.md
docs/api/: openapi.json  openapi.yaml
examples/: 01_healthcare_records.py  02_financial_compliance.py  03_legal_delegation.py  04_ai_data_governance.py  README.md
examples/data/: account_statement.csv  (+3 more)
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
gateway/: Dockerfile  README.md  requirements-dev.txt  requirements.txt
scripts/: gen-python-proto.sh
sdk-js/: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdk-python/: README.md  pyproject.toml
sdk-python/examples/: quickstart.py
sdk-python/privyq/: __init__.py  access.py  client.py  config.py  decision.py  evidence.py  exceptions.py  keys.py  models.py  policies.py  protect.py  seal.py  verify.py
sdk-python/privyq/_proto/: privyq_pb2.py  privyq_pb2_grpc.py
sdk-python/tests/: conftest.py  test_integration.py  test_policies.py  test_v2_verbs.py
tests/: README.md
(+186 files in other folders)
