[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privyq"
version = "1.0.0"
description = "Post-quantum, policy-governed encryption with verifiable privacy evidence"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PrivyQ Contributors" }]
keywords = ["post-quantum", "cryptography", "encryption", "policy", "audit", "kyber", "dilithium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.60",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.0",
    "pylint>=3.0",
]

[project.urls]
Homepage = "https://github.com/privyq/privyq"
Documentation = "https://github.com/privyq/privyq/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["privyq*"]

[tool.black]
line-length = 110

[tool.pytest.ini_options]
testpaths = ["tests"]
